--- a/styles/History.module.css
+++ b/styles/History.module.css
@@ -1,33 +1,55 @@
 .containerHistory {
-    background-color: white;
-    /* width: 75%; */
-    height: 620px;
-    border-radius: 20px;
-    padding: 40px;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-  }
-  
-  .dropdownContent {
-    margin-top: 20px;
-    display: none;
-    position: absolute;
-    background-color: white;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.075);
-    padding: 12px 16px;
-    z-index: 1;
+  background-color: white;
+  height: 110vh;
+  border-radius: 20px;
+  padding: 40px;
+}
+
+.filButton {
+  cursor: pointer;
+}
+.filterButton {
+  position: absolute !important;
+  background-color: #dde9fc;
+  padding: 6px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.dropdownContent {
+  margin-top: 20px;
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.075);
+  padding: 12px 16px;
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.dropdown:hover .dropdownContent {
+  display: block;
+}
+
+.headerHistory {
+  margin-bottom: 40px;
+}
+
+.pagination {
+  background-color: #6379f4;
+    padding: 7px;
+    outline: none;
+    border: none;
     border-radius: 10px;
-  }
-  
-  .dropdown:hover .dropdownContent {
-    display: block;
-  }
-  
-  .headerHistory {
-    margin-bottom: 40px;
-  }
+    margin: 0px 4px;
+    cursor: pointer;
+    color:white;
+}
