--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -1,10 +1,14 @@
+.modal-title {
+  text-align: center;
+}
 .modalConfirm {
     border-radius: 20px;
     padding: 15px;
   }
   
-  .pinCode {
+  .InputPin {
     margin-top: 30px;
     position: relative;
-    left: 60px;
+    display: flex;
+    justify-content: center;   
   }
